[project]
name = "diarycli-ng"
version = "0.3.0"
description = "A CLI program that help creates diary and organize them"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["diary", "cli", "vim"]
authors = [
  {name = "Aaron Imbrock", email = "aaron@sizza.net" }
]

[project.urls]
"Homepage" = "https://github.com/aaron-imbrock/diarycli-ng"
"Source" = "https://github.com/aaron-imbrock/diarycli-ng"

[project.scripts]
diary = "diarycli:main"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
